make the engine work in the browser

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
 
         <div id="editor">Python code goes here</div>
 
-        <canvas id="canvas">canvas</canvas>
+        <canvas id="canvas"></canvas>
 
         <ul id="log">
             <li class="info">Something good</li>
