--- a/static/runtime-python.html
+++ b/static/runtime-python.html
@@ -32,7 +32,42 @@
         // will "boot" the module and make it ready to use. Currently browsers
         // don't support natively imported WebAssembly as an ES module, but
         // eventually the manual initialization won't be required!
-        import init, { greet } from './runtime_python_wasm.js';
+        import init, { greet, Worker } from './runtime_python_wasm.js';
+
+        // from bootstrap.js
+
+        // import("pkg/shared_channel_demo_bg.wasm")
+        //     .then(wasm => import("./index.js"))
+        //     .catch(e => console.error("Error importing `index.js`:", e));
+
+        // from index.js
+
+        // import * as pkg from "pkg";
+        // import Worker from "./worker.js";
+        let shared_channel = new pkg.Channel();
+        let worker = new Worker();
+        worker.onmessage = () => {
+            worker.postMessage(channel.replica());
+            window.sender = channel.sender();
+            console.log("Now, you can use methods on `sender`. Try `sender.init()");
+        }
+
+        // from worker.js
+        
+        // worker = self;
+        // import("./pkg/shared_channel_demo_bg.wasm")
+        // .then(wasm => {
+        // 	import("./pkg/shared_channel_demo.js").then(module => {
+        // 		postMessage("started");
+        // 		worker.onmessage = (msg) => {
+        // 			let channel = module.Channel.from(msg.data);
+        // 			while (true) {
+        // 				channel.run();
+        // 				console.debug("worker: runner terminated, restarting");
+        // 			}
+        // 		}
+        // 	})
+        // });
 
         async function run() {
             // First up we need to actually load the Wasm file, so we use the
