--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="modulepreload" href="runtime-python/module.js" />
+    <link rel="modulepreload" href="runtime-python/worker.js" />
+    <link rel="modulepreload" href="runtime-python/wasm.js" />
 
     <!-- <script>
 
@@ -27,6 +30,8 @@
     <!-- <script src="./bootstrap.js"></script> -->
 
     <script type="module">
+        import * as PythonRuntime from "./runtime-python/module.js";
+
         // Use ES module import syntax to import functionality from the module
         // that we have compiled.
         //
@@ -34,66 +39,74 @@
         // will "boot" the module and make it ready to use. Currently browsers
         // don't support natively imported WebAssembly as an ES module, but
         // eventually the manual initialization won't be required!
-        import init, { Channel } from './runtime_python_wasm.js';
+        // import * as Module from './runtime_python_wasm.js';
 
         // from bootstrap.js
         // from index.js
         // from worker.js
 
-        async function run() {
-            // First up we need to actually load the Wasm file, so we use the
-            // default export to inform it where the Wasm file is located on the
-            // server, and then we wait on the returned promise to wait for the
-            // Wasm to be loaded.
-            //
-            // It may look like this: `await init('./pkg/without_a_bundler_bg.wasm');`,
-            // but there is also a handy default inside `init` function, which uses
-            // `import.meta` to locate the Wasm file relatively to js file.
-            //
-            // Note that instead of a string you can also pass in any of the
-            // following things:
-            //
-            // * `WebAssembly.Module`
-            //
-            // * `ArrayBuffer`
-            //
-            // * `Response`
-            //
-            // * `Promise` which returns any of the above, e.g. `fetch("./path/to/wasm")`
-            //
-            // This gives you complete control over how the module is loaded
-            // and compiled.
-            //
-            // Also note that the promise, when resolved, yields the Wasm module's
-            // exports which is the same as importing the `*_bg` module in other
-            // modes
-            await init();
+        // async function run() {
+        // First up we need to actually load the Wasm file, so we use the
+        // default export to inform it where the Wasm file is located on the
+        // server, and then we wait on the returned promise to wait for the
+        // Wasm to be loaded.
+        //
+        // It may look like this: `await init('./pkg/without_a_bundler_bg.wasm');`,
+        // but there is also a handy default inside `init` function, which uses
+        // `import.meta` to locate the Wasm file relatively to js file.
+        //
+        // Note that instead of a string you can also pass in any of the
+        // following things:
+        //
+        // * `WebAssembly.Module`
+        //
+        // * `ArrayBuffer`
+        //
+        // * `Response`
+        //
+        // * `Promise` which returns any of the above, e.g. `fetch("./path/to/wasm")`
+        //
+        // This gives you complete control over how the module is loaded
+        // and compiled.
+        //
+        // Also note that the promise, when resolved, yields the Wasm module's
+        // exports which is the same as importing the `*_bg` module in other
+        // modes
+        // console.log(Module);
+        // await Module.default();
 
-            // import * as pkg from "pkg";
-            // import Worker from "./worker.js";
-            let channel = new Channel();
-            console.log("channel created");
+        // import * as pkg from "pkg";
+        // import Worker from "./worker.js";
+        // let channel = new Module.Channel();
+        // console.log("channel created");
 
-            let sender = channel.run();
+        // let sender = channel.run();
 
-            // let worker = new Worker("worker.js");
-            // worker.onmessage = () => {
-            //     worker.postMessage(channel.replica());
-            //     window.sender = channel.sender();
-            //     console.log("Now, you can use methods on `sender`. Try `sender.init()");
-            // }
+        // let worker = new Worker("worker.js");
+        // worker.onmessage = () => {
+        //     worker.postMessage(channel.replica());
+        //     window.sender = channel.sender();
+        //     console.log("Now, you can use methods on `sender`. Try `sender.init()");
+        // }
 
-            // greet("world");
-            // console.log("returned from WASM");
+        // greet("world");
+        // console.log("returned from WASM");
 
-            // // And afterwards we can use all the functionality defined in wasm.
-            // const result = add(1, 2);
-            // console.log(`1 + 2 = ${result}`);
-            // if (result !== 3)
-            //     throw new Error("wasm addition doesn't work!");
-        }
+        // // And afterwards we can use all the functionality defined in wasm.
+        // const result = add(1, 2);
+        // console.log(`1 + 2 = ${result}`);
+        // if (result !== 3)
+        //     throw new Error("wasm addition doesn't work!");
+        // }
 
-        run();
+        // run();
+
+        // console.info("main: starting Python Worker");
+        // let worker = new Worker("worker.js", { type: "module" });
+        // // new Worker("worker.js", { type: "module" });
+        // console.info("main: Python Worker started");
+        // console.info(worker);
+
     </script>
     <!-- 
     <script type="module">
