make communication to blocked Python thread work

--- a/static/index.html
+++ b/static/index.html
@@ -9,112 +9,39 @@
     <link rel="modulepreload" href="runtime-python/module.js" />
     <link rel="modulepreload" href="runtime-python/worker.js" />
     <link rel="modulepreload" href="runtime-python/wasm.js" />
-
-    <!-- <script>
-
-        // var counter = 0;
-
-        // const channel = new MessageChannel();
-        // const port1 = channel.port1;
-        // port1.onmessage = function () {
-        //     counter += 1;
-        // }
-
-        // function callback() {
-        //     console.info("sending self-message", counter);
-        //     channel.port2.postMessage("test");
-        //     return counter;
-        // }
-    </script> -->
-
-    <!-- <script src="./bootstrap.js"></script> -->
+    <link rel="modulepreload" href="wasm-tools/wasm.js" />
 
     <script type="module">
+        const LOG_SRC = "[main]";
+        import * as WasmTools from "./wasm-tools/wasm.js";
         import * as PythonRuntime from "./runtime-python/module.js";
 
-        // Use ES module import syntax to import functionality from the module
-        // that we have compiled.
-        //
-        // Note that the `default` import is an initialization function which
-        // will "boot" the module and make it ready to use. Currently browsers
-        // don't support natively imported WebAssembly as an ES module, but
-        // eventually the manual initialization won't be required!
-        // import * as Module from './runtime_python_wasm.js';
+        await WasmTools.default();
 
-        // from bootstrap.js
-        // from index.js
-        // from worker.js
+        console.info(WasmTools);
+        console.info(WasmTools.Channel);
+
+        const BUFFER_SIZE = 65536;
+        let channel_buffers = [new SharedArrayBuffer(4 * 4), new SharedArrayBuffer(BUFFER_SIZE)];
+
+        // FIXME the message receiver in worker.js should be ready at this point, but without the delay it misses the messages somehow
+        window.setTimeout(() => {
+            console.info(LOG_SRC, "setting up channel");
+            PythonRuntime.set_channel_buffers(channel_buffers);
+            WasmTools.set_channel_buffers(channel_buffers);
+            console.info(LOG_SRC, "starting python runtime");
+            PythonRuntime.run();
+        }, 2000);
+
+        window.setTimeout(() => {
+            console.log(LOG_SRC, "sending message to python runtime");
+            WasmTools.send();
+        }, 5000);
 
         // async function run() {
-        // First up we need to actually load the Wasm file, so we use the
-        // default export to inform it where the Wasm file is located on the
-        // server, and then we wait on the returned promise to wait for the
-        // Wasm to be loaded.
-        //
-        // It may look like this: `await init('./pkg/without_a_bundler_bg.wasm');`,
-        // but there is also a handy default inside `init` function, which uses
-        // `import.meta` to locate the Wasm file relatively to js file.
-        //
-        // Note that instead of a string you can also pass in any of the
-        // following things:
-        //
-        // * `WebAssembly.Module`
-        //
-        // * `ArrayBuffer`
-        //
-        // * `Response`
-        //
-        // * `Promise` which returns any of the above, e.g. `fetch("./path/to/wasm")`
-        //
-        // This gives you complete control over how the module is loaded
-        // and compiled.
-        //
-        // Also note that the promise, when resolved, yields the Wasm module's
-        // exports which is the same as importing the `*_bg` module in other
-        // modes
-        // console.log(Module);
-        // await Module.default();
-
-        // import * as pkg from "pkg";
-        // import Worker from "./worker.js";
-        // let channel = new Module.Channel();
-        // console.log("channel created");
-
-        // let sender = channel.run();
-
-        // let worker = new Worker("worker.js");
-        // worker.onmessage = () => {
-        //     worker.postMessage(channel.replica());
-        //     window.sender = channel.sender();
-        //     console.log("Now, you can use methods on `sender`. Try `sender.init()");
-        // }
-
-        // greet("world");
-        // console.log("returned from WASM");
-
-        // // And afterwards we can use all the functionality defined in wasm.
-        // const result = add(1, 2);
-        // console.log(`1 + 2 = ${result}`);
-        // if (result !== 3)
-        //     throw new Error("wasm addition doesn't work!");
-        // }
-
-        // run();
-
-        // console.info("main: starting Python Worker");
-        // let worker = new Worker("worker.js", { type: "module" });
-        // // new Worker("worker.js", { type: "module" });
-        // console.info("main: Python Worker started");
-        // console.info(worker);
-
     </script>
     <!-- 
-    <script type="module">
-        import(`./runtime_python_wasm.js`).then((module) => module.default());
-    </script>
-
     <script>
-        import { greet } from './runtime_python_wasm';
         document.addEventListener("DOMContentLoaded", function () {
             console.info("start");
             greet('World');
