--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>My WINIT example</title>
+    <title>Gam3du - Educational programming platform</title>
 
     <link rel="stylesheet" href="style.css" />
     <link rel="modulepreload" href="index.js" />
