bring application back to wasm and make it non-blocking

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
 
     <script src="ace/ace.js"></script>
     <script>
-        const LOG_SRC = "main:index.html";
+        const LOG_SRC = "[main:index.html]";
 
         document.addEventListener("DOMContentLoaded", function () {
             console.info(LOG_SRC, "DOMContentLoaded");
