accept source code from the editor and let it run using the "start" button

--- a/static/index-old.html
+++ b/static/index-old.html
@@ -7,7 +7,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <link rel="stylesheet" href="style.css" />
     <script type="module">
-        import(`./application-robot.js`).then((module) => module.default());
+        import(`./application-robot.mjs`).then((module) => module.default());
     </script>
 
 </head>
