--- a/static/index.html
+++ b/static/index.html
@@ -9,13 +9,16 @@
 
     <link rel="stylesheet" href="style.css" />
 
+    <link rel="modulepreload" href="index.mjs" />
+    <link rel="modulepreload" href="shared-channel.mjs" />
     <link rel="modulepreload" href="ace/ace.js" />
+
     <link rel="modulepreload" href="application/module.mjs" />
     <link rel="modulepreload" href="application/wasm.js" />
-    <link rel="modulepreload" href="index.mjs" />
+
     <link rel="modulepreload" href="runtime-python/module.mjs" />
-    <link rel="modulepreload" href="runtime-python/wasm.js" />
     <link rel="modulepreload" href="runtime-python/worker.mjs" />
+    <link rel="modulepreload" href="runtime-python/wasm.js" />
 
     <script type="module" src="index.mjs"></script>
 
