--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     <link rel="modulepreload" href="application/module.mjs" />
     <link rel="modulepreload" href="application/wasm.js" />
 
-    <link rel="modulepreload" href="runtime-python/module.mjs" />
+    <!-- <link rel="modulepreload" href="runtime-python/module.mjs" /> -->
     <link rel="modulepreload" href="runtime-python/worker.mjs" />
     <link rel="modulepreload" href="runtime-python/wasm.js" />
 
